deploy: c5ddd5ce322f6874fdc7336765e4347109b90118

--- a/genindex/index.html
+++ b/genindex/index.html
@@ -196,23 +196,105 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#U"><strong>U</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#C"><strong>C</strong></a> | <a href="#D"><strong>D</strong></a> | <a href="#F"><strong>F</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#H"><strong>H</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#L"><strong>L</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#R"><strong>R</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a> | <a href="#V"><strong>V</strong></a> | <a href="#W"><strong>W</strong></a></div>
 </section>
 <section id="A" class="genindex-section">
   <h2>A</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.access_token_expired">access_token_expired (pydrive2.auth.GoogleAuth property)</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiAttribute">ApiAttribute (class in pydrive2.apiattr)</a>
 </li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiAttributeMixin">ApiAttributeMixin (class in pydrive2.apiattr)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.ApiRequestError">ApiRequestError</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResource">ApiResource (class in pydrive2.apiattr)</a>
 </li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResourceList">ApiResourceList (class in pydrive2.apiattr)</a>
 </li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResource.auth">auth (pydrive2.apiattr.ApiResource attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.Auth">Auth() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.auth_method">auth_method (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.Authenticate">Authenticate() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.AuthenticationError">AuthenticationError</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.AuthenticationRejected">AuthenticationRejected</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.AuthError">AuthError</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.Authorize">Authorize() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="C" class="genindex-section">
+  <h2>C</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.CheckAuth">CheckAuth() (in module pydrive2.auth)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.CheckServiceAuth">CheckServiceAuth() (in module pydrive2.auth)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.client_config">client_config (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.CLIENT_CONFIGS_LIST">CLIENT_CONFIGS_LIST (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.CommandLineAuth">CommandLineAuth() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.content">content (pydrive2.files.GoogleDriveFile attribute)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.Copy">Copy() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.drive.GoogleDrive.CreateFile">CreateFile() (pydrive2.drive.GoogleDrive method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.credentials">credentials (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="D" class="genindex-section">
+  <h2>D</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.DEFAULT_SETTINGS">DEFAULT_SETTINGS (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.Delete">Delete() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.DeletePermission">DeletePermission() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="F" class="genindex-section">
+  <h2>F</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.FetchContent">FetchContent() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.FetchMetadata">FetchMetadata() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.FileNotDownloadableError">FileNotDownloadableError</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.FileNotUploadedError">FileNotUploadedError</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.flow">flow (pydrive2.auth.GoogleAuth attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -222,11 +304,97 @@
   <h2>G</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.Get_Http_Object">Get_Http_Object() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.drive.GoogleDrive.GetAbout">GetAbout() (pydrive2.drive.GoogleDrive method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.GetAuthUrl">GetAuthUrl() (pydrive2.auth.GoogleAuth method)</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResource.GetChanges">GetChanges() (pydrive2.apiattr.ApiResource method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.GetContentFile">GetContentFile() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.GetContentIOBuffer">GetContentIOBuffer() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.GetContentString">GetContentString() (pydrive2.files.GoogleDriveFile method)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.ApiRequestError.GetField">GetField() (pydrive2.files.ApiRequestError method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.GetFlow">GetFlow() (pydrive2.auth.GoogleAuth method)</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResourceList.GetList">GetList() (pydrive2.apiattr.ApiResourceList method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.GetPermissions">GetPermissions() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth">GoogleAuth (class in pydrive2.auth)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.drive.GoogleDrive">GoogleDrive (class in pydrive2.drive)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile">GoogleDriveFile (class in pydrive2.files)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFileList">GoogleDriveFileList (class in pydrive2.files)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="H" class="genindex-section">
+  <h2>H</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.http">http (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="I" class="genindex-section">
+  <h2>I</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.InsertPermission">InsertPermission() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.settings.InvalidConfigError">InvalidConfigError</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.InvalidCredentialsError">InvalidCredentialsError</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.IoBuffer">IoBuffer (class in pydrive2.files)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="L" class="genindex-section">
+  <h2>L</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.drive.GoogleDrive.ListFile">ListFile() (pydrive2.drive.GoogleDrive method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.LoadAuth">LoadAuth() (in module pydrive2.auth)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.LoadClientConfig">LoadClientConfig() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.LoadClientConfigFile">LoadClientConfigFile() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.LoadClientConfigSettings">LoadClientConfigSettings() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.LoadCredentials">LoadCredentials() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.LoadCredentialsFile">LoadCredentialsFile() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.LoadMetadata">LoadMetadata() (in module pydrive2.files)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.LoadServiceConfigSettings">LoadServiceConfigSettings() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.settings.LoadSettingsFile">LoadSettingsFile() (in module pydrive2.settings)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.LocalWebserverAuth">LocalWebserverAuth() (pydrive2.auth.GoogleAuth method)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -236,15 +404,27 @@
   <h2>M</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="../pydrive2/#pydrive2.apiattr.ApiResourceList.metadata">metadata (pydrive2.apiattr.ApiResourceList attribute)</a>
+        <li><a href="../pydrive2/#pydrive2.files.MediaIoReadable">MediaIoReadable (class in pydrive2.files)</a>
 </li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.apiattr.ApiResourceList.metadata">metadata (pydrive2.apiattr.ApiResourceList attribute)</a>
+
+        <ul>
+          <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.metadata">(pydrive2.files.GoogleDriveFile attribute)</a>
+</li>
+        </ul></li>
         <li>
     module
 
         <ul>
           <li><a href="../pydrive2/#module-pydrive2.apiattr">pydrive2.apiattr</a>
+</li>
+          <li><a href="../pydrive2/#module-pydrive2.auth">pydrive2.auth</a>
+</li>
+          <li><a href="../pydrive2/#module-pydrive2.drive">pydrive2.drive</a>
+</li>
+          <li><a href="../pydrive2/#module-pydrive2.files">pydrive2.files</a>
+</li>
+          <li><a href="../pydrive2/#module-pydrive2.settings">pydrive2.settings</a>
 </li>
         </ul></li>
     </ul></td>
@@ -262,6 +442,36 @@
           <li><a href="../pydrive2/#module-pydrive2.apiattr">module</a>
 </li>
         </ul></li>
+        <li>
+    pydrive2.auth
+
+        <ul>
+          <li><a href="../pydrive2/#module-pydrive2.auth">module</a>
+</li>
+        </ul></li>
+        <li>
+    pydrive2.drive
+
+        <ul>
+          <li><a href="../pydrive2/#module-pydrive2.drive">module</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li>
+    pydrive2.files
+
+        <ul>
+          <li><a href="../pydrive2/#module-pydrive2.files">module</a>
+</li>
+        </ul></li>
+        <li>
+    pydrive2.settings
+
+        <ul>
+          <li><a href="../pydrive2/#module-pydrive2.settings">module</a>
+</li>
+        </ul></li>
     </ul></td>
   </tr></table>
 </section>
@@ -270,7 +480,57 @@
   <h2>R</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.IoBuffer.read">read() (pydrive2.files.IoBuffer method)</a>
+
+        <ul>
+          <li><a href="../pydrive2/#pydrive2.files.MediaIoReadable.read">(pydrive2.files.MediaIoReadable method)</a>
+</li>
+        </ul></li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.Refresh">Refresh() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.RefreshError">RefreshError</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResourceList.Reset">Reset() (pydrive2.apiattr.ApiResourceList method)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="S" class="genindex-section">
+  <h2>S</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.SaveCredentials">SaveCredentials() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.SaveCredentialsFile">SaveCredentialsFile() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.service">service (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.SERVICE_CONFIGS_LIST">SERVICE_CONFIGS_LIST (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.ServiceAuth">ServiceAuth() (pydrive2.auth.GoogleAuth method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.SetContentFile">SetContentFile() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.SetContentString">SetContentString() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.settings">settings (pydrive2.auth.GoogleAuth attribute)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.settings.SettingsError">SettingsError</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="T" class="genindex-section">
+  <h2>T</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.Trash">Trash() (pydrive2.files.GoogleDriveFile method)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -280,11 +540,37 @@
   <h2>U</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.UnTrash">UnTrash() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResource.update">update() (pydrive2.apiattr.ApiResource method)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="../pydrive2/#pydrive2.apiattr.ApiResource.UpdateMetadata">UpdateMetadata() (pydrive2.apiattr.ApiResource method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.Upload">Upload() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.uploaded">uploaded (pydrive2.files.GoogleDriveFile attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="V" class="genindex-section">
+  <h2>V</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.settings.ValidateSettings">ValidateSettings() (in module pydrive2.settings)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="W" class="genindex-section">
+  <h2>W</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.files.IoBuffer.write">write() (pydrive2.files.IoBuffer method)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -302,7 +588,7 @@
         <div class="bottom-of-page">
           <div class="left-details">
             <div class="copyright">
-                Copyright &#169; 2020, JunYoung Gwak, Scott Blevins, Robin Nabel, Google Inc, Iterative Inc
+                Copyright &#169; 2022, JunYoung Gwak, Scott Blevins, Robin Nabel, Google Inc, Iterative Inc
             </div>
             Made with <a href="https://www.sphinx-doc.org/">Sphinx</a> and <a class="muted-link" href="https://pradyunsg.me">@pradyunsg</a>'s
             
