deploy: affc59cea8a8c385f843016056a9c620e7a60ee2

--- a/genindex/index.html
+++ b/genindex/index.html
@@ -304,6 +304,8 @@
   <h2>G</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="../pydrive2/#pydrive2.fs.GDriveFileSystem">GDriveFileSystem (class in pydrive2.fs)</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth.Get_Http_Object">Get_Http_Object() (pydrive2.auth.GoogleAuth method)</a>
 </li>
         <li><a href="../pydrive2/#pydrive2.drive.GoogleDrive.GetAbout">GetAbout() (pydrive2.drive.GoogleDrive method)</a>
