deploy: c473d631d9c47559d66943ecedfaec46af1aa78a

--- a/genindex/index.html
+++ b/genindex/index.html
@@ -330,6 +330,8 @@
 </li>
         <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.GetPermissions">GetPermissions() (pydrive2.files.GoogleDriveFile method)</a>
 </li>
+        <li><a href="../pydrive2/#pydrive2.files.GoogleDriveFile.GetRevisions">GetRevisions() (pydrive2.files.GoogleDriveFile method)</a>
+</li>
         <li><a href="../pydrive2/#pydrive2.auth.GoogleAuth">GoogleAuth (class in pydrive2.auth)</a>
 </li>
         <li><a href="../pydrive2/#pydrive2.drive.GoogleDrive">GoogleDrive (class in pydrive2.drive)</a>
