--- a/genindex/index.html
+++ b/genindex/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html class="no-js" lang="en" data-content_root="">
   <head><meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="#" /><link rel="search" title="Search" href="../search/" />
 
-    <!-- Generated with Sphinx 7.1.2 and Furo 2023.07.26 --><title>Index - PyDrive2 1.14.0 documentation</title>
+    <!-- Generated with Sphinx 7.1.2 and Furo 2023.08.19 --><title>Index - PyDrive2 1.14.0 documentation</title>
 <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css?v=135e06be" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo-extensions.css?v=36a5483c" />
