deploy: ea5c8f2605d988536b7dd8ee8ea30826cd95177d

--- a/pydrive2/index.html
+++ b/pydrive2/index.html
@@ -508,6 +508,8 @@ don’t use this function and use the corresponding function you want.</p>
 retrieving authentication code.</p>
 <p>This function is not for web server application. It creates local web
 server for user from standalone application.</p>
+<p>If GDRIVE_NON_INTERACTIVE environment variable is set, this function
+raises AuthenticationError.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
